[package]
name = "pause-subxt"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR GPL-3.0"
homepage = "https://www.parity.io/"
description = "Subxt example usage with tx-puase and safe-mode pallets"

[dependencies]
subxt = "0.24.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
sp-keyring = "6.0.0"
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"
scale-info = "2.2.0"
